# GPURenderer

./: CMakeLists.txt  CMakePresets.json
GPURenderer/: CMakeLists.txt  GPURenderer.cpp  RendererApp.cpp  RendererApp.h  shader.frag  shader.vert
